feat: Implementing House Module
