# swagger.json
@@ -182,6 +182,40 @@
           }
         }
       }
+    },
+    "/house/": {
+      "post": {
+        "tags": [
+          "House"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/IHouseDTO"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/IHouseResponseDTO"
+            },
+            "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -309,6 +343,190 @@
         }
       },
       "$schema": "http://json-schema.org/draft-07/schema#"
+    },
+    "IHouse": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "area": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "rooms": {
+          "type": "number"
+        },
+        "bathrooms": {
+          "type": "number"
+        },
+        "parkingSpaces": {
+          "type": "number"
+        },
+        "salePrice": {
+          "type": "number"
+        },
+        "rentPrice": {
+          "type": "number"
+        },
+        "saleAvailable": {
+          "type": "boolean"
+        },
+        "rentAvailable": {
+          "type": "boolean"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "$schema": "http://json-schema.org/draft-07/schema#"
+    },
+    "IHouseDTO": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "area": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "rooms": {
+          "type": "number"
+        },
+        "bathrooms": {
+          "type": "number"
+        },
+        "parkingSpaces": {
+          "type": "number"
+        },
+        "salePrice": {
+          "type": "number"
+        },
+        "rentPrice": {
+          "type": "number"
+        },
+        "saleAvailable": {
+          "type": "boolean"
+        },
+        "rentAvailable": {
+          "type": "boolean"
+        }
+      },
+      "$schema": "http://json-schema.org/draft-07/schema#"
+    },
+    "IHouseResponseDTO": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "area": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "rooms": {
+          "type": "number"
+        },
+        "bathrooms": {
+          "type": "number"
+        },
+        "parkingSpaces": {
+          "type": "number"
+        },
+        "salePrice": {
+          "type": "number"
+        },
+        "rentPrice": {
+          "type": "number"
+        },
+        "saleAvailable": {
+          "type": "boolean"
+        },
+        "rentAvailable": {
+          "type": "boolean"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "$schema": "http://json-schema.org/draft-07/schema#"
+    },
+    "IHouseUpdateDTO": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "area": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "rooms": {
+          "type": "number"
+        },
+        "bathrooms": {
+          "type": "number"
+        },
+        "parkingSpaces": {
+          "type": "number"
+        },
+        "salePrice": {
+          "type": "number"
+        },
+        "rentPrice": {
+          "type": "number"
+        },
+        "saleAvailable": {
+          "type": "boolean"
+        },
+        "rentAvailable": {
+          "type": "boolean"
+        }
+      },
+      "$schema": "http://json-schema.org/draft-07/schema#"
+    },
+    "IHouseReponseListDTO": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/IHouseResponseDTO"
+      }
     }
   }
 }
